MODON MRE BPDEV/force-app/main/default/objects/EOI_Journey_Event__e/EOI_Journey_Event__e.object-meta.xml
<CustomObject>
    <label>EOI Journey Event</label>
    <pluralLabel>EOI Journey Events</pluralLabel>
</CustomObject>