MODON MRE BPDEV/force-app/main/default/objects/EOI_Journey_Event__e/fields/Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>Registration_Id__c</fullName>
    <label>Registration Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>