MODON MRE BPDEV/force-app/main/default/objects/EOI_Journey_Event__e/fields/Site_Source__c.field-meta.xml
<CustomField>
    <fullName>Site_Source__c</fullName>
    <label>Site Source</label>
    <length>40</length>
    <type>Text</type>
</CustomField>