MODON MRE BPDEV/force-app/main/default/objects/EOI_Journey_Event__e/fields/Visitor_Id__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Id__c</fullName>
    <label>Visitor Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>